--- a/tetris.html
+++ b/tetris.html
@@ -27,7 +27,8 @@
 <body>
   <video id="video" autoplay></video>
   <canvas id="canvas"></canvas>
-  <div id="div">dsds</div>
+  <div id="div"></div>
+  <input type="button" style="width: 128px; height: 64px;" onclick="toggleFullScreen(); document.getElementsByTagName('input')[0].style.display = 'none';" value="Развернуть"/>
 
   <!-- <script>
     //https://developer.mozilla.org/ru/docs/Web/API/MediaDevices/getUserMedia
