--- a/tetris.html
+++ b/tetris.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="./tetris.css">
+
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+  <meta http-equiv="Pragma" content="no-cache"/>
+  <meta http-equiv="Expires" content="0"/>
+
+
   <script>
     window.onload = function () {
       let xhr = new XMLHttpRequest();
