--- a/tetris.html
+++ b/tetris.html
@@ -34,7 +34,7 @@
   <video id="video" autoplay></video>
   <canvas id="canvas"></canvas>
   <div id="div"></div>
-  <input type="button" style="width: 128px;" onclick="toggleFullScreen();" value="Развернуть"/>
+  <!-- <input type="button" style="width: 128px;" onclick="toggleFullScreen();" value="Развернуть"/> -->
 
   <script>
     //https://developer.mozilla.org/ru/docs/Web/API/MediaDevices/getUserMedia
