--- a/tetris.html
+++ b/tetris.html
@@ -34,7 +34,7 @@
   <video id="video" autoplay></video>
   <canvas id="canvas"></canvas>
   <div id="div"></div>
-  <input type="button" style="width: 128px;" onclick="toggleFullScreen(); document.getElementsByTagName('input')[0].style.display='none'" value="Развернуть"/>
+  <!-- <input type="button" style="width: 128px; height: 128px;" onclick="toggleFullScreen(); document.getElementsByTagName('input')[0].style.display='none'" value="Развернуть"/> -->
 
 </body>
 
